--- a/bandwidth.html
+++ b/bandwidth.html
@@ -26,7 +26,7 @@
             <div class="container">
                 <div class="col-12">
                     <p class="title">ED1R</p>
-                    <p class="subtitle">Operational Services</p>
+                    <p class="subtitle">Servicios operacionales desde la estación en Papatrigo</p>
                 </div>
             </div>
         </div>
