--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
                         <p>Ficheros y carpetas compartidas</p>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <a href="http://connectivity.local">
+                        <div class="icon">
+                            <i class="fas fa-cogs fa-3x"></i>
+                        </div>
+                        <h2>Connectivity</h2>
+                        <p>Control sobre ADSL / 4G y los servicios del servidor</p>
+                        </a>
+                    </div>
+                </div>
                  <div class="col-md-4">
                     <div class="card">
                         <a href="bandwidth.html">
