--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                            <a href="https://sites.google.com/view/ed1r-wiki/start">
+                        <a href="https://sites.google.com/view/ed1r-wiki/start">
                             <div class="icon">
                                 <i class="fab fa-wikipedia-w fa-3x"></i>
                             </div>
@@ -49,120 +49,131 @@
                 <div class="col-md-4">
                     <div class="card">
                         <a href="https://drive.google.com/drive/folders/13rZcjrx-pFu5jEuGPNPrkzfWHXo5AQpk">
-                        <div class="icon">
-                            <i class="fab fa-google-drive fa-3x"></i>
-                        </div>
-                        <h2>Google Drive</h2>
-                        <p>Ficheros y carpetas compartidas</p>
+                            <div class="icon">
+                                <i class="fab fa-google-drive fa-3x"></i>
+                            </div>
+                            <h2>Google Drive</h2>
+                            <p>Ficheros y carpetas compartidas</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://connectivity.local">
-                        <div class="icon">
-                            <i class="fas fa-cogs fa-3x"></i>
-                        </div>
-                        <h2>Connectivity</h2>
-                        <p>Control sobre ADSL / 4G y los servicios del servidor</p>
+                            <div class="icon">
+                                <i class="fas fa-cogs fa-3x"></i>
+                            </div>
+                            <h2>Connectivity</h2>
+                            <p>Control sobre ADSL / 4G y los servicios del servidor</p>
                         </a>
                     </div>
                 </div>
-                 <div class="col-md-4">
+                <div class="col-md-4">
                     <div class="card">
                         <a href="bandwidth.html">
-                        <div class="icon">
-                            <i class="fas fa-chart-bar fa-3x"></i>
-                        </div>
-                        <h2>Bandwidth</h2>
-                        <p>Estatisticas sobre el consumo de ancho de banda de la linea ADSL</p>
+                            <div class="icon">
+                                <i class="fas fa-chart-bar fa-3x"></i>
+                            </div>
+                            <h2>Bandwidth</h2>
+                            <p>Estatisticas sobre el consumo de ancho de banda de la linea ADSL</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://rotators.local">
-                        <div class="icon">
-                            <i class="far fa-compass fa-3x"></i>
-                        </div>
-                        <h2>Rotores</h2>
-                        <p>Interfaz web de nuestros rotores</p>
+                            <div class="icon">
+                                <i class="far fa-compass fa-3x"></i>
+                            </div>
+                            <h2>Rotores</h2>
+                            <p>Interfaz web de nuestros rotores</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://switches.local">
-                        <div class="icon">
-                            <i class="fas fa-arrows-alt fa-3x"></i>
-                        </div>
-                        <h2>Switches</h2>
-                        <p>Interfaz web de nuestros Conmutadores (Bandswitch, Stackmatches, Power)</p>
+                            <div class="icon">
+                                <i class="fas fa-arrows-alt fa-3x"></i>
+                            </div>
+                            <h2>Switches</h2>
+                            <p>Interfaz web de nuestros Conmutadores (Bandswitch, Stackmatches, Power)</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://tower1.webcam.control.local">
-                        <div class="icon">
-                            <i class="fas fa-camera fa-3x"></i>
-                        </div>
-                        <h2>WebCam Tower1</h2>
-                        <p>Webcam mirando hacia torre 1</p>
+                            <div class="icon">
+                                <i class="fas fa-camera fa-3x"></i>
+                            </div>
+                            <h2>WebCam Tower1</h2>
+                            <p>Webcam mirando hacia torre 1</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://tower2.webcam.control.local">
-                        <div class="icon">
-                            <i class="fas fa-camera fa-3x"></i>
-                        </div>
-                        <h2>WebCam Tower2</h2>
-                        <p>Webcam mirando hacia torre 2</p>
+                            <div class="icon">
+                                <i class="fas fa-camera fa-3x"></i>
+                            </div>
+                            <h2>WebCam Tower2</h2>
+                            <p>Webcam mirando hacia torre 2</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://tower34.webcam.control.local">
-                        <div class="icon">
-                            <i class="fas fa-camera fa-3x"></i>
-                        </div>
-                        <h2>WebCam Twr3&4</h2>
-                        <p>Webcam mirando hacia torre 3 y 4</p>
+                            <div class="icon">
+                                <i class="fas fa-camera fa-3x"></i>
+                            </div>
+                            <h2>WebCam Twr3&4</h2>
+                            <p>Webcam mirando hacia torre 3 y 4</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://shack.webcam.control.local">
-                        <div class="icon">
-                            <i class="fas fa-camera fa-3x"></i>
-                        </div>
-                        <h2>WebCam Shack</h2>
-                        <p>Webcam del Shack</p>
+                            <div class="icon">
+                                <i class="fas fa-camera fa-3x"></i>
+                            </div>
+                            <h2>WebCam Shack</h2>
+                            <p>Webcam del Shack</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card">
+                        <a href="http://shack2.webcam.control.local">
+                            <div class="icon">
+                                <i class="fas fa-camera fa-3x"></i>
+                            </div>
+                            <h2>WebCam Shack2</h2>
+                            <p>Segunda webcam del Shack</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://remote.webcam.control.local">
-                        <div class="icon">
-                            <i class="fas fa-camera fa-3x"></i>
-                        </div>
-                        <h2>WebCam Remote</h2>
-                        <p>Webcam de la estacion remote</p>
+                            <div class="icon">
+                                <i class="fas fa-camera fa-3x"></i>
+                            </div>
+                            <h2>WebCam Remote</h2>
+                            <p>Webcam de la estacion remote</p>
                         </a>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <a href="http://adsb.local">
-                        <div class="icon">
-                            <i class="fas fa-plane fa-3x"></i>
-                        </div>
-                        <h2>ADSB</h2>
-                        <p>Receptor ADSB para observar aviones en 1090MHz</p>
+                            <div class="icon">
+                                <i class="fas fa-plane fa-3x"></i>
+                            </div>
+                            <h2>ADSB</h2>
+                            <p>Receptor ADSB para observar aviones en 1090MHz</p>
                         </a>
                     </div>
                 </div>
